--- a/algheroXdesign/package.json
+++ b/algheroXdesign/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "sass": "^1.62.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "vue3-carousel": "^0.3.1"
   }
 }
