--- a/algheroXdesign/package.json
+++ b/algheroXdesign/package.json
@@ -10,9 +10,12 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.6.6",
+    "@types/d3": "^7.4.0",
     "nuxt": "^3.4.1"
   },
   "dependencies": {
+    "d3": "^7.8.5",
+    "nuxt-d3-module": "^1.0.6",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "vue3-carousel": "^0.3.1"
